lib path changed

--- a/choropleth.html
+++ b/choropleth.html
@@ -6,9 +6,9 @@
     <!-- import required libraries here -->
     <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
     <script type="text/javascript" src="../lib/d3-dsv.min.js"></script>
-    <script src="../lib/d3-geo-projection.v2.min.js"></script>
-    <script src="../lib/d3-legend.min.js"></script>
-    <script src="../lib/d3-tip.min.js"></script>
+    <script src="lib/d3-geo-projection.v2.min.js"></script>
+    <script src="lib/d3-legend.min.js"></script>
+    <script src="lib/d3-tip.min.js"></script>
     <style>
         div.tooltip {
             position: absolute;
